# django-cast

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS.rst  BACKLOG.md  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Procfile  Procfile.dev  README.md  README.rst  README_OLD.rst  bootstrap.md  command_lines.txt  commands.py  commands_old.py  db.sqlite3  django-cast-example.ps1  docs_inventory.md  gallery_duplicate_bug_analysis.md  getenv.sh  justfile  manage.py  postactivate  pyproject.toml  pytest.ini  release.txt  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  (+3 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: workflow.yml
backlog/: 2025-07-11-documentation-polish.md  2026-04-18-repository-readmodels.md  2026-04-22-search-hardening-follow-ups.md  2026-05-12-podcast-episode-contributors.md  2026-05-18-podcast-feed-import.md  2026-05-18-speaker-diarization.md  2026-05-27-audio-transcript-diarization-mode.md  2026-05-28-contributor-voice-references.md  2026-05-29-voice-reference-candidate-picker-ux.md  2026-05-30-post-body-block-extension.md  2026-06-01-safe-transcript-file-replacement.md  2026-06-01-transcript-speaker-mapping-s3-fingerprint.md  2026-06-02-custom-audio-player.md  2026-06-03-custom-audio-player-follow-ups.md  2026-06-08-persistent-player-staging.md  2026-06-18-automatic-episode-numbering.md  2026-06-18-podcast-publishing-metadata.md  2026-06-19-programmatic-content-editing-api.md  2026-06-21-anonymous-comment-self-editing.md  2026-06-22-anonymous-comment-self-editing-frontend-plan.md  2026-06-23-security-review.md  2026-06-26-public-transcript-storage-analysis.md  2026-06-26-public-transcript-storage.md  2026-06-30-editor-api-rendered-preview.md  2026-06-30-editor-api-scoped-token-auth.md  2026-07-02-architecture-review.md  2026-07-07-chapter-marks-in-feeds-plan.md  2026-07-07-overview-heading-block-rendering.md  2026-07-07-remove-heading-block-plan.md  2026-07-08-editor-api-custom-post-body-blocks.md  2026-07-09-cast-studio-product-boundary.md  2026-07-16-typeahead-search.md
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogpage.py
cast/: __init__.py  access_log.py  admin.py  admin_urls.py  apps.py  appsettings.py  blocks.py  cache.py  cast_and_wagtail_urls.py  context_processors.py  dashboard_views.py  devdata.py  feeds.py  filters.py  forms.py  models.py  moderation.py  naive_bayes.py  naive_bayes_model.json  old_forms.py  renditions.py  runner.py  settings.py  urls.py  utils.py  viewmixins.py  views.py  wagtail_forms.py  wagtail_hooks.py  wagtail_views.py  wagtail_widgets.py  widgets.py
cast/admin_urls/: audio.py  audio_urls.py  transcript.py  (+2 more)
docs/: analytics.rst  api.rst  architecture.rst  audio.rst  backup.rst  blog.rst  cast.api.rst  cast.migrations.rst  cast.rst  cast.templatetags.rst  cdn.rst  comments.rst  conf.py  content.rst  context-processors.rst  contributing.rst  deployment.rst  development.rst  django-admin.rst  ec2_install.rst  episode.rst  features.rst  frontend.rst  gallery.rst  glossary.rst  heroku.rst  image.rst  index.rst  installation.rst  installation_analysis.md  installation_tasks.md  integrate.rst  management-commands.rst  media.rst  models.rst  podcast.rst  post.rst  production_services.rst  quickstart.rst  release.rst  (+15 more)
docs_old/: analytics.rst  cast.migrations.rst  cast.templatetags.rst  conf.py  deployment.rst  local_install.rst  modules.rst  templates.rst  windows_install.rst
example/: cast  manage.py  threadedcomments
example_site/: urls.py  wsgi.py
fluent_comments/: admin.py  akismet.py  apps.py  appsettings.py  email.py  models.py  moderation.py  urls.py  utils.py  views.py
home/: models.py
javascript/: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.comments.config.ts  vite.config.ts
notebooks/: add_child_debug.ipynb  audio_handling.ipynb  broken_access_log.ipynb  chaptermarks_form.ipynb  comments.json  debug.ipynb  debug_add_new_post.ipynb  debug_blog_post_list.ipynb  debug_comments_templates.ipynb  dice.ipynb  django_upgrade_debug.ipynb  example_site  faceted_navigation_debug.ipynb  feed_structure.ipynb  fluent_comments  gallery.ipynb  gallery_tests.ipynb  media  moderation.ipynb  moderation_debug.ipynb  naive_bayes.ipynb  naive_bayes_class.ipynb  naive_bayes_from_scratch.ipynb  paginagtion_too_long.ipynb  post_get_absolute_url.ipynb  read_chaptermarks_from_audio_file.ipynb  remove_obsolete_symlinks.ipynb  render_ajax.ipynb  sms_dataset_to_messages.ipynb  spamfilter.ipynb  sync_media_ids.ipynb  test_file_handling.ipynb  test_wagtail_views.ipynb  twitter_player_card.ipynb  video_exploration_foo.ipynb  wagtail  wagtail_render_post.ipynb  wagtail_video_views.ipynb
scripts/: __init__.py  benchmark_typeahead.py  check_asset_freshness.py  playwright_utils.py  show_bundle_sizes.py  typeahead_benchmark_settings.py
specs/: 2026-01-17_design_system.md  2026-01-17_fix_example_project.md  2026-02-08_search_filters_redesign.md
tests/: admin_media_permissions_test.py  admin_test.py  api_editor_test.py  api_test.py  apps_test.py  audio_models_test.py  audio_template_test.py  audio_views_test.py  blocks_test.py  blog_index_test.py  cache_test.py  cast_comments_internals_test.py  chapters_view_test.py  checks_test.py  comment_author_edits_test.py  comments_test.py  conftest.py  convenience_test.py  custom_player_template_test.py  custom_post_body_blocks.py  dev_settings_test.py  dev_tools_test.py  dev_views_test.py  endpoint_authorization_test.py  ensure_reference_site_test.py  episode_detail_test.py  error_handler_views_test.py  factories.py  feed_detail_test.py  feed_test.py  file_replacement_test.py  filter_test.py  follow_links_test.py  forms_test.py  gallery_duplicate_test.py  gallery_view_test.py  gallery_views_test.py  image_operations_test.py  import_cycle_test.py  known_speaker_apply_test.py  (+79 more)
threadedcomments/: __init__.py  admin.py  forms.py  models.py  tests.py  util.py
vuepress/: README.md  package.json
wagtail/: __init__.py
(+1412 files in other folders)
