[project]
name = "django-cast"
version = "0.2.62"
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-cast@wersdoerfer.de"},
    {name = "Dominik Geldmacher", email = "oryon@cyberise.de"},
]
description = "Django Cast is a blogging and podcasting package built on Django and Wagtail CMS"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "blog",
    "podcast",
    "video",
    "audio"
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Internet",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "crispy-bootstrap4",  # bootstrap4 theme
    "django>=4.2,<7",  # Django itself
    "django-crispy-forms",  # bootstrap4 theme
    "django-contrib-comments",  # comments framework
    "django-filter",  # filter section on blog index
    "django-htmx",  # htmx support
    "django-model-utils",  # model mixins
    "django-tasks>=0.7,<0.13",  # async transcript completion
    "django-threadedcomments",  # comments framework
    "django-vite",  # vite support for things like gallery-modal web components
    "modelsearch>=1.2.2,<1.4",  # full-text search integration
    "Pygments",  # syntax highlighting for code blocks
    "python-dateutil",  # relativedelta for styleguide post dates
    "python-slugify",  # slugify for page slugs
    "rich",  # progress bars for management commands
    "setuptools",  # required by django-model-utils for python >= 3.12 :/
    "wagtail>=7.0,<8",  # wagtail itself
]

[project.optional-dependencies]
transcript-worker = [
    "django-tasks-db>=0.12,<0.13",  # database-backed transcript worker
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "cast"
# The quickstart command loads these package resources with importlib.resources.
# Module contents are included by uv_build defaults; keep this explicit for sdist audits.
source-include = ["src/cast/quickstart_templates/*.template"]

[dependency-groups]
dev = [
    "django-allauth",  # for mypy
    "django_extensions",
    "django-stubs[compatible-mypy]",
    "factory_boy",
    "feedparser",
    "furo",
    "jupyter",
    "mypy",
    "playwright",
    "pre-commit",
    "pytest >= 6",
    "pytest-cov >= 3",
    "pytest-django",
    "pytest-mock",
    "pytest-randomly",
    "pytz",
    "ruff",
    "tox",
    "tox-uv",
    "typer",
    "types-python-slugify",
    "types-requests",
    "types-python-dateutil>=2.9.0.20260124",
]

[project.urls]
Documentation = "https://django-cast.readthedocs.io/en/latest/"
Source = "https://github.com/ephes/django-cast"

[project.scripts]
django-cast-quickstart = "cast.quickstart:main"

[tool.ruff]
line-length = 119
target-version = "py311"
exclude = ["*.ipynb", "*/migrations/*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
minversion = "6.0"
testpaths = ["tests"]
markers = [
    "slow: marks tests that are intentionally slower and can be skipped for a faster local feedback loop",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--reuse-db",
    "--no-migrations",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
plugins = ["mypy_django_plugin.main"]
exclude = "[a-zA-Z]*/(migrations)|(example)/(.)*"  # ignore migrations
files = ["src", "tests/settings.py"]

[[tool.mypy.overrides]]
module = ["tests.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["cast.feeds"]
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
branch = true
source = ["src/cast"]
omit = [
    "src/cast/migrations/*",
    "src/cast/comments/migrations/*",
    "src/cast/runner.py",
    "src/cast/quickstart.py",
]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
